<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/pic_splash"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/username"
            android:textColorHint="@color/gray"
            android:elevation="15dp"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:layout_marginVertical="10dp"
            android:textSize="18sp"
            android:drawableStart="@drawable/pic_email_et"
            android:background="@drawable/bg_et_unchecked"
            tools:ignore="RtlSymmetry"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password"
            android:elevation="15dp"
            android:textSize="18sp"
            android:drawablePadding="10dp"
            android:layout_marginVertical="10dp"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:padding="10dp"
            android:drawableStart="@drawable/img"
            android:background="@drawable/bg_et_unchecked"
            tools:ignore="RtlSymmetry,TextFields"/>
        <TextView
            android:id="@+id/tvBackup"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:layout_gravity="end"
            android:text="@string/forgot_your_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:gravity="top"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@null"
            android:text="@string/save"
            android:elevation="15dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/bg_button_sign"
            android:layout_marginVertical="10dp"/>
        <Button
            android:id="@+id/btnGet"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@null"
            android:text="@string/get"
            android:elevation="15dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/bg_button_sign"
            android:layout_marginVertical="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="17sp"
                android:text="@string/didn_t_have_any_account" />
            <TextView
                android:id="@+id/tvSignup"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="17sp"
                android:text="@string/sign_up_here"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>